--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "(npx kill-port 3000) && next dev",
     "lint": "next lint",
     "build": "next build",
     "start": "next start",
     "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "cypress": "cypress open"
   },
   "dependencies": {
+    "bootstrap": "5.1.3",
     "next": "latest",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
@@ -19,6 +22,7 @@
     "@testing-library/user-event": "13.5.0",
     "@types/react": "17.0.38",
     "babel-jest": "27.4.5",
+    "cypress": "^9.2.1",
     "eslint": "8.5.0",
     "eslint-config-next": "latest",
     "eslint-plugin-testing-library": "5.0.1",
