navbar and basic css issue fixed

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "(npx kill-port 3000) && next dev",
+    "dev": "(npx kill-port 9005) && next dev -p 9005",
     "dev-start": "next dev",
     "lint": "next lint",
     "build": "next build",
