--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap": "5.1.3",
+    "lodash": "^4.17.21",
     "next": "latest",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
@@ -21,6 +23,7 @@
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
+    "@types/lodash": "^4.14.182",
     "@types/react": "17.0.38",
     "babel-jest": "27.4.5",
     "cypress": "^9.2.1",
